--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-github-calendar": "^5.0.5",
     "sonner": "^2.0.7"
   },
   "devDependencies": {
